--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "test:watch": "npm test -- --watch"
   },
   "devDependencies": {
-    "ava": "0.23.0",
-    "eslint": "4.11.0",
-    "eslint-config-oniyi": "5.0.2",
-    "eslint-plugin-ava": "4.2.2",
-    "nyc": "11.3.0",
-    "prettier-eslint-cli": "4.4.0"
+    "ava": "^0.25.0",
+    "eslint": "^4.19.1",
+    "eslint-config-oniyi": "^5.1.0",
+    "nyc": "^11.6.0",
+    "prettier-eslint-cli": "^4.7.1"
   },
   "dependencies": {
-    "big-integer": "^1.6.26",
+    "big-integer": "^1.6.27",
     "node-biginteger": "0.0.10",
     "node-rsa": "^0.4.2",
     "properties": "^1.2.1"
