--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oniyi-ltpa",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Tools to deal with Lightweight Third-Party Authentication tokens",
   "main": "lib/index.js",
   "scripts": {
@@ -28,12 +28,22 @@
     "type": "git",
     "url": "git+ssh://git@github.com/benkroeger/oniyi-ltpa.git"
   },
-  "keywords": ["ltpa", "ltpa2", "ibm", "websphere", "domino", "rsa", "pem"],
+  "keywords": [
+    "ltpa",
+    "ltpa2",
+    "ibm",
+    "websphere",
+    "domino",
+    "rsa",
+    "pem"
+  ],
   "author": "Benjamin Kroeger <benjamin.kroeger@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/benkroeger/oniyi-ltpa/issues"
   },
   "homepage": "https://github.com/benkroeger/oniyi-ltpa#readme",
-  "engines": { "node": "^8.11.1" }
+  "engines": {
+    "node": "^8.11.1"
+  }
 }
