Relax dependency on Node to allow newer versions

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "homepage": "https://github.com/benkroeger/oniyi-ltpa#readme",
   "engines": {
-    "node": "^8.11.1"
+    "node": ">=8.11.1"
   },
   "files": [
     "lib/"
